<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.AddMeetingActivity">

    <Button
        android:id="@+id/buttonBack"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/ic_arrow_white_24dp"
        app:layout_constraintStart_toStartOf="@+id/scrollView"
        app:layout_constraintTop_toTopOf="@+id/scrollView" />


    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/color_meeting"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_gravity="center_horizontal"
                android:background="@color/blue"
                android:contentDescription="@string/color_meeting" />


            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="5dp"
                android:text="@string/date_de_reunion"
                android:textColor="@color/cyanBlue"
                android:textSize="20sp" />

            <DatePicker
                android:id="@+id/date_meeting"
                style="@style/date_picker_theme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:endYear="2100"
                android:startYear="2020" />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/date_meetingStartLyt"
                android:layout_width="300dp"
                android:layout_height="120dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="25dp">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/heure_de_debut"
                    android:textColor="@color/cyanBlue"
                    android:textSize="20sp" />

                <TimePicker
                    android:id="@+id/date_meeting_start"
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:timePickerMode="spinner" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/date_meeting_end_Lyt"
                android:layout_width="300dp"
                android:layout_height="120dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp">


                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/heure_de_fin"
                    android:textColor="@color/cyanBlue"
                    android:textSize="20sp" />


                <TimePicker
                    android:id="@+id/date_meeting_end"
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:timePickerMode="spinner" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/location_meetingLyt"
                android:layout_width="300dp"
                android:layout_height="80dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="50dp">

                <Spinner
                    android:id="@+id/location_meeting"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/spinner_style" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/sujet_meetingLyt"
                android:layout_width="300dp"
                android:layout_height="80dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp">

                <EditText
                    android:id="@+id/sujet_meeting"
                    android:layout_width="300dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center_horizontal"
                    android:ems="10"
                    android:hint="@string/sujet"
                    android:inputType="textMultiLine"
                    android:lines="1"
                    android:minLines="1"
                    android:autofillHints="" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/participantLyt"
                android:layout_width="300dp"
                android:layout_height="120dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp">

                <MultiAutoCompleteTextView
                    android:id="@+id/participant"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/participants" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/text_error"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:textColor="@color/red"
                android:textSize="15sp"
                android:visibility="invisible"
                tools:text="Erreur" />

            <Button
                android:id="@+id/save_meeting"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="10dp"
                android:background="@color/cyanBlue"
                android:text="@string/save" />

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>