<resources>
    <string name="app_name">Ma réu</string>

    <string name="heure_de_debut">heure de debut</string>
    <string name="heure_de_fin">heure de Fin</string>
    <string name="sujet">Sujet (4 caracteres minimum)</string>
    <string name="participants">Participants</string>
    <string name="save">Save</string>
    <string name="filtre">Filtre</string>
    <string name="error_msg">Désolé, mais la salle sélectionnée, %1$s n\'est pas disponible à ce moment</string>
    <string name="date_de_reunion">Date de reunion</string>
    <string name="color_meeting">Color Meeting</string>
    <string name="par_date">Par date</string>
    <string name="par_salle">Par Salle</string>

</resources>